@@ -56,17 +56,17 @@ SUFFIXES = .rc .res
 
 bin_PROGRAMS = glom/glom
 lib_LTLIBRARIES = glom/libglom/libglom-@GLOM_ABI_VERSION@.la
-pyexec_LTLIBRARIES = glom/python_embed/python_module/glom_@GLOM_ABI_VERSION@.la
+pyexec_LTLIBRARIES = glom/python_embed/python_module/glom_@GLOM_ABI_VERSION_UNDERLINED@.la
 
 include Makefile_libglom.am
 include Makefile_glom.am
 include Makefile_tests.am
 
-glom_python_embed_python_module_glom_@GLOM_ABI_VERSION@_la_SOURCES =		\
+glom_python_embed_python_module_glom_@GLOM_ABI_VERSION_UNDERLINED@_la_SOURCES =		\
 	glom/python_embed/python_module/py_glom_module.cc	\
 	glom/python_embed/python_module/py_glom_module.h
 
-glom_python_embed_python_module_glom_@GLOM_ABI_VERSION@_la_LIBADD = \
+glom_python_embed_python_module_glom_@GLOM_ABI_VERSION_UNDERLINED@_la_LIBADD = \
 	glom/libglom/libglom-$(GLOM_ABI_VERSION).la \
 	$(PYTHON_LIBS) $(BOOST_PYTHON_LIBS)
 
@@ -76,7 +76,7 @@ else
 pymod_ldflags = -module -avoid-version -no-undefined
 endif
 glom_pyexport = -export-symbols-regex '^_*initglom'
-glom_python_embed_python_module_glom_@GLOM_ABI_VERSION@_la_LDFLAGS = $(pymod_ldflags) $(glom_pyexport)
+glom_python_embed_python_module_glom_@GLOM_ABI_VERSION_UNDERLINED@_la_LDFLAGS = $(pymod_ldflags) $(glom_pyexport)
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = glom/libglom/glom-@GLOM_ABI_VERSION@.pc
