@@ -1,3 +1,10 @@
+2010-10-19  Murray Cumming  <murrayc@murrayc.com>
+
+	Python module: Use _ instead of . in the .so file name.
+
+	* Makefile.am: This was broken by the commit on 2010-09-10.
+	* tests/test_load_python_library.cc: Use the variable instead of hard-coding.
+
 1.16.0:
 
 2010-10-18  Murray Cumming  <murrayc@murrayc.com>>
